Chromium implementation of new WebKit postMessageToWorkerObject/Context APIs that accept MessagePortChannels as an optional parameter. For now, we just ignore passed-in MessagePortChannels (they are automatically freed) but we'll add support for them once the Chromium implementation of cross-process MessagePorts is in place.

This is the chromium-side change for
https://bugs.webkit.org/show_bug.cgi?id=25435 and should not be landed until
that change lands in the WebKit tree.

BUG=15426
TEST=none (WebKit change contains LayoutTests)

R=levin@chromium.org
Review URL: http://codereview.chromium.org/147189


Review URL: http://codereview.chromium.org/151090

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@19608 0039d316-1c4b-4281-b951-d872f2087c98